# RogueLink

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: roguelink.example.toml
roguelink/: __init__.py  api.py  auth.py  cli.py  config.py  daemon.py  paths.py  state.py  utils.py
roguelink/services/: __init__.py  adapter_control.py  adapter_manager.py  ap_manager.py  driver_manager.py  fan_manager.py  firewall_manager.py  health_manager.py  lan_manager.py  logs.py  management_manager.py  metrics.py  speedtest_manager.py  system_manager.py  wan_manager.py  wifi_scan_manager.py
roguelink/web/static/: app.js  style.css
roguelink/web/templates/: adapters.html  ap.html  base.html  lan.html  logs.html  management.html  networks.html  overview.html  system.html  wan.html
scripts/: dev_run.sh  install.sh  uninstall.sh
systemd/: roguelinkd.service
