[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roguelink"
version = "0.1.0"
description = "RogueLink — Rogue Network Tool. Raspberry Pi router/AP appliance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RogueLink Contributors" }]
keywords = ["raspberry-pi", "router", "wifi", "hostapd", "nftables", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Networking",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "tomli>=2.0; python_version<'3.11'",
]

[project.scripts]
roguelink = "roguelink.cli:main"
roguelinkd = "roguelink.daemon:main"

[tool.setuptools.packages.find]
include = ["roguelink*"]

[tool.setuptools.package-data]
roguelink = ["web/templates/*.html", "web/static/*"]
